--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:4I0vjVimZR2J1+eCzJHtD0eT75CbN63cdNjOzOeCjJo=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-
+APP_LOG_LEVEL=daily
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
